# autoquant

./: .gitignore  README.md  run_daily.py
.github/workflows/: etl-daily.yml  etl.yml
app/: package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
app/src/app/(dashboard)/: layout.tsx
app/src/app/(dashboard)/dashboard/: page.tsx
app/src/app/(dashboard)/fada/: page.tsx
app/src/app/(dashboard)/history/: charts.tsx  page.tsx
app/src/app/(dashboard)/oem/: page.tsx
app/src/app/(dashboard)/revenue/: page.tsx
app/src/components/charts/: daily-trend-chart.tsx  ice-ev-chart.tsx  segment-donut.tsx
app/src/components/layout/: header.tsx  sidebar.tsx
app/src/components/ui/: card.tsx  kpi-card.tsx  loading.tsx
app/src/lib/: metadata.ts  queries.ts  supabase.ts  types.ts  utils.ts
etl/: .env.example  cron.py  extract_fada_pdfs_simple.py  main.py  pyproject.toml  requirements.txt
etl/config/: settings.py
etl/migrations/: 001_initial_schema.sql
etl/src/alerts/: telegram.py
etl/src/connectors/: __init__.py  base.py  bse_wholesale.py  fada.py  siam_historical.py  vahan.py
etl/src/quality/: validation_gate.py
etl/src/transforms/: backfill.py  gold_refresh.py  mapper.py  pipeline.py
etl/src/utils/: database.py  extraction_log.py  logging_config.py  migrate.py  retry.py  vercel.py
etl/tests/: test_backfill.py  test_bse.py  test_fada.py  test_mapper.py  test_pipeline.py  test_siam.py
step1/: 001_ddl_full_schema.sql  002_seed_dimensions.sql  003_ddl_fada_bse_bronze.sql  architecture.mermaid
supabase/functions/fada-monthly-extract/: index.ts
(+10 files in other folders)
